# segway

./: .gitignore  .hgignore  .readthedocs.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  NEWS  NEWS.orig  README  README.md  README.rst  TODO  bitbucket-pipelines.yml  environment.yml  install.py  install.sh  install.tmpl  pyproject.toml  release.sh  release.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: continuous-integration-workflow.yml  python-publish.yml
doc/: Makefile  api.rst  conf.py  faq.rst  gethelp.py  index.rst  make.bat  quick.rst  quickstart.rst  segway.rst  support.rst  technical.rst  troubleshooting.rst
docker/: Dockerfile
gmseg/: _util.py  bed.py  importdata.py  importseq.py  run.py
gmseg/data/: input.master  input.master.tmpl  observation.tmpl  output.master  seg.inc  seg.str.tmpl
segway/: __init__.py  _configparser.py  _util.py  bed.py  calc_distance.py  gen_gmtk_params.py  gmtk.py  gtf2bed.py  h5histogram.py  h5values.py  importdata.py  importseq.py  include.py  input_master.py  layer.py  load_data.py  load_seq.py  measure_prop.py  name_tracks.py  observations.py  output.py  res_usage.py  run.py  save_metadata.py  segway_input_master.py  sge.py  structure.py  task.py  version.py  virtual_evidence.py  winner.py
segway/cluster/: __init__.py  common.py  local.py  lsf.py  pbs.py  sge.py  sge_setup.py  slurm.py
segway/data/: dinucleotide.tmpl  dont_train.list  dumpnames.list  input.master.tmpl  map_frameIndex_ruler.dt.txt  output.master  (+23 more)
src/: Makefile  _load_data.c
test/: .read.all.swp  README  clean.sh  compare_directory.py  input.hmmseg.master  read.all  result.new  result.old  sample_input.master  seg_table.tab  test.sh  test_all.sh  testnew.sh  unit_tests.py
(+1446 files in other folders)
